<resources>
    <string name="app_name">NU Media</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_notifications">Notifications</string>
    <string name="assalam">Assalamu`alaikum</string>
    <string name="highlight">Highlight</string>
    <string name="doa_untuk_hari_ini">Doa untuk hari ini</string>
    <string name="nu_online">NU Online</string>
    <string name="nu_care">NU Care</string>
    <string name="nu_games">NU Games</string>
    <string name="nu_tv">NU TV</string>
    <string name="nama_anda"></string>
    <string name="sekarang_menuju_waktu">Sekarang Menuju Waktu</string>
    <string name="sholat">Sholat (Coming Soon)</string>
    <string name="lokasi_anda">lokasi (Coming Soon)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
