<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:id="@+id/scrollbar_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewCount">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@drawable/bg_colorhome1"
                tools:ignore="MissingConstraints">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="91dp"
                    android:layout_marginStart="123dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="124dp"
                    android:src="@drawable/nucover"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_waktu"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="140dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="NotSibling">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_color_doa_harian"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_color_doa_harian"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/assalam"
                            android:textColor="@color/putih" />
                        <TextView
                            android:id="@+id/txt_namaAnda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/nama_anda"
                            android:textColor="@color/putih" />
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_color_doa_harian"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="12sp"
                        android:text="@string/sekarang_menuju_waktu"
                        android:textColor="@color/putih"/>
                    <TextView
                        android:id="@+id/txt_sholat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/sholat"
                        android:textColor="@color/putih"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="9sp"
                    android:id="@+id/lokasi_anda"
                    android:text="@string/lokasi_anda"
                    android:textColor="@color/putih"
                    tools:ignore="SmallSp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:id="@+id/Cv_NUonline"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/nutap"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/ijo_text"
                            android:text="@string/nu_online"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/nuCare"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/nucare"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/ijo_text"
                            android:text="@string/nu_care"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center">
                <android.support.v7.widget.CardView
                    android:id="@+id/nuGames"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/nutap"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/ijo_text"
                            android:text="@string/nu_games"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/nuTv"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:src="@drawable/tv"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/ijo_text"
                            android:text="@string/nu_tv"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/highlight"/>
            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_highlight"
                android:orientation="horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>